workloads/poc10-aks/poc10-aks-tenant-b/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: poc10-aks-tenant-b
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: joseberrocal/poc09-server:ef84342
          ports:
            - containerPort: 5000
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
