workloads/poc10-aks/poc10-aks-tenant-b/postgres-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
  namespace: poc10-aks-tenant-b
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
