workloads/poc10-aks/poc10-aks-tenant-b/allow-client-egress-to-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-egress-to-server
  namespace: poc10-aks-tenant-b
spec:
  podSelector:
    matchLabels:
      component: web
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              component: server
      ports:
        - protocol: TCP
          port: 5000
