workloads/poc10-aks/poc10-aks-tenant-b/allow-client-to-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-to-server
  namespace: poc10-aks-tenant-b
spec:
  podSelector:
    matchLabels:
      component: server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              component: web
      ports:
        - protocol: TCP
          port: 5000
