workloads/poc10-aks/poc10-aks-tenant-b/allow-server-egress-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-server-egress-to-postgres
  namespace: poc10-aks-tenant-b
spec:
  podSelector:
    matchLabels:
      component: server
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              component: postgres
      ports:
        - protocol: TCP
          port: 5432
