workloads/poc10-aks/poc10-aks-tenant-b/allow-server-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-server-to-postgres
  namespace: poc10-aks-tenant-b
spec:
  podSelector:
    matchLabels:
      component: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              component: server
      ports:
        - protocol: TCP
          port: 5432
